examples/simple_example/errors.txt
example.py:5: error: Incompatible types in assignment (expression has type "str", variable has type "int")  [assignment]
example.py:6: error: "type: ignore" comment without error code (consider "type: ignore[assignment]" instead)  [ignore-without-code]
Found 2 errors in 1 file (checked 1 source file)
